# PCU-H11

./: .cproject  .gitignore  .gitmodules  .mxproject  .pre-commit-config.yaml  CMakeLists.txt  README.md  STM32H723.svd  STM32H723ZGTX_FLASH.ld  STM32H723ZGTX_RAM.ld  hard_faullt_analysis.py  requirements.txt  test_delegation  test_delegation.cpp
.github/workflows/: build.yml  compile-checks.yml  format-checks.yml  tests.yml
Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Inc/Code_generation/: Generator.py
Core/Inc/Code_generation/Packet_generation/: DataTemplate.hpp  OrderTemplate.hpp  Packet_descriptions.py  Packet_generation.py
Core/Inc/Communications/Packets/: DataPackets.hpp  OrderPackets.hpp
Core/Inc/Data/: Data.hpp
Core/Inc/PCU/: PCU.hpp
Core/Inc/PCU/Actuators/: Actuators.hpp  PWMActuators.hpp
Core/Inc/PCU/Comms/: Comms.hpp
Core/Inc/PCU/Control/: CurrentControl.hpp  LookUpTable.hpp  Runs.hpp  SpaceVector.hpp  SpeedControl.hpp
Core/Inc/PCU/Data/: Data.hpp
Core/Inc/PCU/Sensors/: CurrentSensor.hpp  Sensors.hpp  Speetec.hpp  VoltageSensor.hpp
Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c  sysmem.c  system_stm32h7xx.c
Core/Src/Examples/: ExampleADC.cpp  ExampleEXTI.cpp  ExampleEthernet.cpp  ExampleMPU.cpp  ExamplePackets.cpp  ExampleTCPIP.cpp  ExamplesHardFault.cpp  LinearSensorCharacterization.cpp
Core/Src/PCU/: PCU.cpp
Core/Src/PCU/Actuators/: Actuators.cpp  PWMActuators.cpp
Core/Src/PCU/Comms/: Comms.cpp
Core/Src/PCU/Control/: CurrentControl.cpp  Runs.cpp  SpaceVector.cpp  SpeedControl.cpp
Core/Src/PCU/Sensors/: CurrentSensor.cpp  Speetec.cpp
Core/Src/Runes/: Runes.cpp  generated_metadata.cpp
Core/Src/config/: leds_hard_fault.cpp
docs/examples/: README.md  example-adc.md  example-ethernet.md  example-exti.md  example-hardfault.md  example-linear-sensor-characterization.md  example-mpu.md  example-packets.md  example-tcpip.md
docs/template-project/: build-debug.md  example-tcpip.md  setup.md  testing.md
tools/: binary_metadata_template.cpp  build-example.sh  create_look_up_table.cpp  example_packets_check.py  example_tcpip_quality_gate.sh  example_tcpip_soak.sh  example_tcpip_soak_hours.sh  example_tcpip_stress.py  generate_binary_metadata.py  init.bat  init.sh  install-git-hooks.sh  preflash_check.py  retrieve_flash_data.py  run_example_tcpip_nucleo.sh  run_example_tcpip_stress.sh
